objects/metazoa3__snapshot_prompt__c.object
<CustomObject>
    <description>This is an administrative object for Snapshot Change and Release Automation. This object records saved Chat GPT Prompt information for Metadata Studio.</description>
    <fields>
        <fullName>metazoa3__extra_field_one__c</fullName>
        <label>Extra Field One</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>metazoa3__extra_field_two__c</fullName>
        <label>Extra Field Two</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>metazoa3__extra_flag_one__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Extra Flag One</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>metazoa3__extra_flag_two__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Extra Flag Two</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>metazoa3__object_type__c</fullName>
        <label>Object Type</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>metazoa3__overflow_one__c</fullName>
        <label>Overflow One</label>
        <length>130000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>metazoa3__overflow_two__c</fullName>
        <label>Overflow Two</label>
        <length>130000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>metazoa3__prompt_body__c</fullName>
        <label>Prompt Body</label>
        <length>130000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Snapshot Prompt</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Snapshot Prompts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>